--- a/.env
+++ b/.env
@@ -7,7 +7,7 @@ CLIENT_NAME=MR_DIY
 # ==============================
 # MODEL
 # ==============================
-MODEL_PATH=C:\Users\TUF\Documents\python\face_capture\models\face_detection_yunet_2023mar.onnx
+MODEL_PATH=models\face_detection_yunet_2023mar.onnx
 SCORE_THRESHOLD=0.9 # 0.0 - 1.0
 
 # ==============================
@@ -36,7 +36,7 @@ RESIZE_HEIGHT=360
 # VIEW CONFIG 800x450 (16:9) , 1280x720 (16:9), 640x480 (4:3),
 # 640x360 (16:9), 320x240 (4:3)
 # ==============================
-ENABLE_VIEW=false # true or false
+ENABLE_VIEW=true # true or false
 DISPLAY_WIDTH=640
 DISPLAY_HEIGHT=360
 
