--- a/.env
+++ b/.env
@@ -2,7 +2,7 @@
 # ID
 # ==============================
 CHANNEL_ID=1
-CLIENT_NAME=MR_DIY
+CLIENT_ID=MR_DIY
 
 # ==============================
 # MODEL
@@ -15,8 +15,8 @@ SCORE_THRESHOLD=0.9 # 0.0 - 1.0
 # ==============================
 INPUT_TYPE=rtsp # options: webcam, rtsp
 CAMERA_INDEX=0
-#RTSP_URL=rtsp://admin:Moderat2025@192.168.18.30:554/Streaming/Channels/101
-RTSP_URL=rtsp://10.20.33.6/user=DIY&password=Diy2024&channel=10&stream=0.sdp?
+RTSP_URL=rtsp://admin:Moderat2025@192.168.18.30:554/Streaming/Channels/101
+#RTSP_URL=rtsp://10.20.33.6/user=DIY&password=Diy2024&channel=10&stream=0.sdp?
 
 # ==============================
 # SAVE CONFIG
@@ -28,7 +28,7 @@ MAX_IMAGES=150
 # ==============================
 # RESIZE INPUT (UNTUK DETEKSI)
 # ==============================
-ENABLE_RESIZE=false # true or false
+ENABLE_RESIZE=true # true or false
 RESIZE_WIDTH=640
 RESIZE_HEIGHT=360
 
@@ -43,5 +43,5 @@ DISPLAY_HEIGHT=360
 # ==============================
 # WEBHOOK
 # ==============================
-WEBHOOK_URL=http://100.100.13.115:3001/webhook/detection
+WEBHOOK_URL=http://100.100.13.115:3001/webhook/detectionss
 WEBHOOK_TIMEOUT=5
