--- a/.env
+++ b/.env
@@ -43,5 +43,5 @@ DISPLAY_HEIGHT=360
 # ==============================
 # WEBHOOK
 # ==============================
-WEBHOOK_URL=http://100.100.13.115:3001/webhook/detectionss
+WEBHOOK_URL=http://100.100.13.115:3001/webhook/detection
 WEBHOOK_TIMEOUT=5
