--- a/.env
+++ b/.env
@@ -1,8 +1,8 @@
 # ==============================
 # ID
 # ==============================
-CHANNEL_ID=1
-CLIENT_ID=MR_DIY
+CHANNEL_ID=f65822ad-1eb3-4076-9083-7bfdc814b434
+CLIENT_ID=MR_DIY_RYAN
 
 # ==============================
 # MODEL
@@ -43,5 +43,5 @@ DISPLAY_HEIGHT=360
 # ==============================
 # WEBHOOK
 # ==============================
-WEBHOOK_URL=http://100.100.13.115:3001/webhook/detection
+WEBHOOK_URL=http://100.100.13.115:3001/webhook/detectionss
 WEBHOOK_TIMEOUT=5
