--- a/.env
+++ b/.env
@@ -15,8 +15,8 @@ SCORE_THRESHOLD=0.9 # 0.0 - 1.0
 # ==============================
 INPUT_TYPE=rtsp # options: webcam, rtsp
 CAMERA_INDEX=0
-RTSP_URL=rtsp://admin:Moderat2025@192.168.18.30:554/Streaming/Channels/101
-#RTSP_URL=rtsp://10.20.33.6/user=DIY&password=Diy2024&channel=10&stream=0.sdp?
+#RTSP_URL=rtsp://admin:Moderat2025@192.168.18.30:554/Streaming/Channels/101
+RTSP_URL=rtsp://10.20.33.6/user=DIY&password=Diy2024&channel=10&stream=0.sdp?
 
 # ==============================
 # SAVE CONFIG
@@ -28,7 +28,8 @@ MAX_IMAGES=150
 # ==============================
 # RESIZE INPUT (UNTUK DETEKSI)
 # ==============================
-ENABLE_RESIZE=true # true or false
+# true or false
+ENABLE_RESIZE=true 
 RESIZE_WIDTH=640
 RESIZE_HEIGHT=360
 
@@ -36,7 +37,8 @@ RESIZE_HEIGHT=360
 # VIEW CONFIG 800x450 (16:9) , 1280x720 (16:9), 640x480 (4:3),
 # 640x360 (16:9), 320x240 (4:3)
 # ==============================
-ENABLE_VIEW=true # true or false
+# true or false
+ENABLE_VIEW=true 
 DISPLAY_WIDTH=640
 DISPLAY_HEIGHT=360
 
