--- a/.env
+++ b/.env
@@ -15,8 +15,8 @@ SCORE_THRESHOLD=0.9 # 0.0 - 1.0
 # ==============================
 INPUT_TYPE=rtsp # options: webcam, rtsp
 CAMERA_INDEX=0
-#RTSP_URL=rtsp://admin:Moderat2025@192.168.18.30:554/Streaming/Channels/101
-RTSP_URL=rtsp://10.20.33.6/user=DIY&password=Diy2024&channel=10&stream=0.sdp?
+RTSP_URL=rtsp://admin:Moderat2025@192.168.18.30:554/Streaming/Channels/101
+#RTSP_URL=rtsp://10.20.33.6/user=DIY&password=Diy2024&channel=10&stream=0.sdp?
 
 # ==============================
 # SAVE CONFIG
