--- a/.env
+++ b/.env
@@ -29,7 +29,7 @@ MAX_IMAGES=150
 # RESIZE INPUT (UNTUK DETEKSI)
 # ==============================
 # true or false
-ENABLE_RESIZE=true 
+ENABLE_RESIZE=true
 RESIZE_WIDTH=640
 RESIZE_HEIGHT=360
 
@@ -45,5 +45,5 @@ DISPLAY_HEIGHT=360
 # ==============================
 # WEBHOOK
 # ==============================
-WEBHOOK_URL=http://100.100.13.115:3001/webhook/detectionss
+WEBHOOK_URL=http://100.100.13.115:3001/webhook/detection
 WEBHOOK_TIMEOUT=5
