--- a/.env
+++ b/.env
@@ -1,34 +1,15 @@
-# ==============================
-# ID
-# ==============================
-CHANNEL_ID=f65822ad-1eb3-4076-9083-7bfdc814b434
-CLIENT_ID=MR_DIY_RYAN
+SERVICE_ID=capture_01
 
-# ==============================
-# MODEL
-# ==============================
-MODEL_PATH=models\face_detection_yunet_2023mar.onnx
+MODEL_PATH=models/face_detection_yunet_2023mar.onnx
 SCORE_THRESHOLD=0.9 # 0.0 - 1.0
 
-# ==============================
-# INPUT SOURCE
-# ==============================
-INPUT_TYPE=rtsp # options: webcam, rtsp
-CAMERA_INDEX=0
-RTSP_URL=rtsp://admin:Moderat2025@192.168.18.30:554/Streaming/Channels/101
-#RTSP_URL=rtsp://10.20.33.6/user=DIY&password=Diy2024&channel=10&stream=0.sdp?
-
-# ==============================
-# SAVE CONFIG
-# ==============================
 SAVE_FOLDER=image_face
-SAVE_INTERVAL=10.0
+SAVE_INTERVAL=5
 MAX_IMAGES=150
 
 # ==============================
-# RESIZE INPUT (UNTUK DETEKSI)
+# PROCESSING
 # ==============================
-# true or false
 ENABLE_RESIZE=true
 RESIZE_WIDTH=640
 RESIZE_HEIGHT=360
@@ -37,13 +18,17 @@ RESIZE_HEIGHT=360
 # VIEW CONFIG 800x450 (16:9) , 1280x720 (16:9), 640x480 (4:3),
 # 640x360 (16:9), 320x240 (4:3)
 # ==============================
-# true or false
-ENABLE_VIEW=true 
-DISPLAY_WIDTH=640
-DISPLAY_HEIGHT=360
+ENABLE_VIEW=true
+DISPLAY_WIDTH=320
+DISPLAY_HEIGHT=240
 
-# ==============================
-# WEBHOOK
-# ==============================
+# Grid matrix preview 
+GRID_ROWS=2
+GRID_COLS=2
+
 WEBHOOK_URL=http://100.100.13.115:3001/webhook/detection
+CCTV_ENDPOINT=http://100.100.13.115:3001/webhook/cctv
+
+CAMERA_REFRESH_INTERVAL=60 # dalam detik
+
 WEBHOOK_TIMEOUT=5
