Remove Thread CCTV

--- a/.env
+++ b/.env
@@ -20,15 +20,17 @@ RESIZE_HEIGHT=360
 # ==============================
 ENABLE_VIEW=true
 DISPLAY_WIDTH=320
-DISPLAY_HEIGHT=240
+DISPLAY_HEIGHT=180
 
 # Grid matrix preview 
 GRID_ROWS=2
 GRID_COLS=2
 
 WEBHOOK_URL=http://100.100.13.115:3001/webhook/detection
-CCTV_ENDPOINT=http://100.100.13.115:3001/webhook/cctv
+#WEBHOOK_URL=https://dashboard.smart-gateway.net/api/webhook/detections
+#CCTV_ENDPOINT=http://100.100.13.115:3001/webhook/cctv
+CCTV_ENDPOINT=https://dashboard.smart-gateway.net/api/webhook/cctv
 
-CAMERA_REFRESH_INTERVAL=60 # dalam detik
+CAMERA_REFRESH_INTERVAL=20 # dalam detik
 
 WEBHOOK_TIMEOUT=5
