--- a/.env
+++ b/.env
@@ -10,7 +10,7 @@ MAX_IMAGES=150
 # ==============================
 # PROCESSING
 # ==============================
-ENABLE_RESIZE=true
+ENABLE_RESIZE=false
 RESIZE_WIDTH=640
 RESIZE_HEIGHT=360
 
@@ -26,7 +26,7 @@ DISPLAY_HEIGHT=180
 GRID_ROWS=2
 GRID_COLS=2
 
-WEBHOOK_URL=http://100.100.13.115:3001/webhook/detection
+WEBHOOK_URL=http://100.100.13.115:3001/webhook/detectionss
 #WEBHOOK_URL=https://dashboard.smart-gateway.net/api/webhook/detections
 #CCTV_ENDPOINT=http://100.100.13.115:3001/webhook/cctv
 CCTV_ENDPOINT=https://dashboard.smart-gateway.net/api/webhook/cctv
