--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
 SERVICE_ID=capture_01
 
 MODEL_PATH=models/face_detection_yunet_2023mar.onnx
-SCORE_THRESHOLD=0.9 # 0.0 - 1.0
+SCORE_THRESHOLD=0.8 # 0.0 - 1.0
 
 SAVE_FOLDER=image_face
 SAVE_INTERVAL=5
@@ -10,7 +10,7 @@ MAX_IMAGES=150
 # ==============================
 # PROCESSING
 # ==============================
-ENABLE_RESIZE=false
+ENABLE_RESIZE=true
 RESIZE_WIDTH=640
 RESIZE_HEIGHT=360
 
@@ -27,7 +27,7 @@ GRID_ROWS=2
 GRID_COLS=2
 
 WEBHOOK_URL=http://100.100.13.115:3001/webhook/detectionss
-#WEBHOOK_URL=https://dashboard.smart-gateway.net/api/webhook/detections
+#WEBHOOK_URL=   
 #CCTV_ENDPOINT=http://100.100.13.115:3001/webhook/cctv
 CCTV_ENDPOINT=https://dashboard.smart-gateway.net/api/webhook/cctv
 
