--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
 SERVICE_ID=capture_01
 
 MODEL_PATH=models/face_detection_yunet_2023mar.onnx
-SCORE_THRESHOLD=0.8 # 0.0 - 1.0
+SCORE_THRESHOLD=0.7 # 0.0 - 1.0
 
 SAVE_FOLDER=image_face
 SAVE_INTERVAL=5
@@ -15,16 +15,15 @@ RESIZE_WIDTH=640
 RESIZE_HEIGHT=360
 
 # ==============================
-# VIEW CONFIG 800x450 (16:9) , 1280x720 (16:9), 640x480 (4:3),
+# VIEW CONFIG 854x480 (16:9) , 1280x720 (16:9), 640x480 (4:3),
 # 640x360 (16:9), 320x240 (4:3)
 # ==============================
 ENABLE_VIEW=true
-DISPLAY_WIDTH=320
-DISPLAY_HEIGHT=180
+#DISPLAY_WIDTH=320
+#DISPLAY_HEIGHT=180
+DISPLAY_WIDTH=854
+DISPLAY_HEIGHT=480
 
-# Grid matrix preview 
-GRID_ROWS=2
-GRID_COLS=2
 
 WEBHOOK_URL=http://100.100.13.115:3001/webhook/detectionss
 #WEBHOOK_URL=   
@@ -34,3 +33,7 @@ CCTV_ENDPOINT=https://dashboard.smart-gateway.net/api/webhook/cctv
 CAMERA_REFRESH_INTERVAL=20 # dalam detik
 
 WEBHOOK_TIMEOUT=5
+
+DEBUG_MODE=false
+DEBUG_VIDEO_FOLDER=./sample_video
+DEBUG_LOOP=true
