--- a/.env
+++ b/.env
@@ -13,6 +13,7 @@ MAX_IMAGES=150
 ENABLE_RESIZE=true
 RESIZE_WIDTH=640
 RESIZE_HEIGHT=360
+MIN_SIZE_CAPTURE=25
 
 # ==============================
 # VIEW CONFIG 854x480 (16:9) , 1280x720 (16:9), 640x480 (4:3),
